<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.01"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.99"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.0"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1"/>

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintTop_toTopOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintBottom_toTopOf="@id/editTextLayoutName"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/imageProfile">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:defaultFocusHighlightEnabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutCollege"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutName">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCollege"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/college"
                    android:inputType="text"
                    android:defaultFocusHighlightEnabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutCourse"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutCollege">
                <AutoCompleteTextView
                    android:id="@+id/editTextCourse"
                    android:hint="@string/course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutSemester"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutCourse">
                <AutoCompleteTextView
                    android:id="@+id/editTextSemester"
                    android:hint="@string/semester"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutSemester"
                android:text="@string/languages"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupLanguages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewLanguages"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutInterest1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/chipGroupLanguages">
                <AutoCompleteTextView
                    android:id="@+id/editTextInterest1"
                    android:hint="@string/interest1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutInterest2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutInterest1">
                <AutoCompleteTextView
                    android:id="@+id/editTextInterest2"
                    android:hint="@string/interest2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutInterest3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutInterest2">
                <AutoCompleteTextView
                    android:id="@+id/editTextInterest3"
                    android:hint="@string/interest3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutHobbies"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutInterest3">
                <AutoCompleteTextView
                    android:id="@+id/editTextHobbies"
                    android:hint="@string/hobbies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutHobbies"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:defaultFocusHighlightEnabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/Save"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/roboto"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/editTextLayoutDescription"
                app:layout_constraintBottom_toBottomOf="@id/guideline4"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/guideline1"/>
            <RelativeLayout
                android:id="@+id/progress_circular_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/progress_bar_background"
                android:elevation="5dp"
                android:padding="20dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <ProgressBar
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminateTint="@android:color/white" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>